# MyDB-LocalDevEnvs

./: README.md
MemGraph/: Makefile  README.md  pyproject.toml
MemGraph/docker/: docker-compose.cluster.yml  docker-compose.single.yml
MemGraph/notebooks/: 01-getting-started.ipynb  02-graph-queries.ipynb  03-algorithms.ipynb
MemGraph/scripts/: setup.sh  test-basic-graph.sh  test-connection.sh
MongoDB/: .env  Makefile  README.md  docker-compose-cluster.yml  docker-compose.yml  mongod-replica.conf  mongod.conf  mongodb-keyfile
MongoDB/init-scripts/: 01-init-users.js  02-sample-data.js
MongoDB/scripts/: backup.sh  init-replica-set.sh  monitor.sh  restore.sh  test-replica-set.sh
Neo4J/: Makefile  README.md
Neo4J/docker/: docker-compose.cluster.yml  (+1 more)
PostgreSQL/: .env  .env.example  Makefile  README.md  docker-compose-cluster.yml  docker-compose.yml  haproxy.cfg  pgadmin-cluster-servers.json  pgadmin-servers.json  postgresql-primary.conf  postgresql-replica.conf  postgresql.conf  setup-replica.sh
ScyllaDB/: .gitignore  Makefile  README.md  pyproject.toml
ScyllaDB/docker/: docker-compose.cluster.yml  docker-compose.single.yml  docker-compose.yml
ScyllaDB/notebooks/: 01-getting-started.ipynb  02-advanced-queries.ipynb  03-data-modeling.ipynb  README.md
ScyllaDB/scripts/: setup.sh  test-cluster.py  test-connection.sh
Weaviate/: .gitignore  Makefile
pgVector/: .env  .env.example  Dockerfile  Makefile  README.md  docker-compose-cluster.yml  docker-compose.yml  postgresql-primary.conf  postgresql-replica.conf  postgresql.conf  setup-replica.sh
(+25 files in other folders)
